--- a/views/details.hbs
+++ b/views/details.hbs
@@ -1,27 +1,27 @@
 <div class="container">
-    <h1 class="my-4">Title : {{course.title}}
+    <h1 class="my-4">Title : {{body.title}}
     </h1>
 
     <div class="row">
 
         <div class="col-md-8">
-            <img class="img-fluid" src="{{course.imageUrl}}" alt="{{course.title}}" />
+            <img class="img-fluid" src="{{body.imageUrl}}" alt="{{body.title}}" />
         </div>
 
         <div class="col-md-4 text-center">
             <h4 class="my-3">Duration</h4>
-            <p>{{course.duration}}</p>
+            <p>{{body.duration}}</p>
             <h3 class="my-3">Description</h3>
-            <p>{{course.description}}</p>
+            <p>{{body.description}}</p>
 
-            {{#if hasUser}}
-            <a class="btn btn-danger" href="/create/:{{id}}/delete">Delete</a>
-            <a class="btn btn-warning" href="/create/:{{id}}/edit">Edit</a>
+            {{#if isOwner}}
+            <a class="btn btn-danger" href="/course/{{body._id}}/delete">Delete</a>
+            <a class="btn btn-warning" href="/course/{{body._id}}/edit">Edit</a>
             {{else}}
             {{#if enrolled}}
             <span class="enrolled-span">You are already enrolled</span>
             {{else}}
-            <a class="btn btn-primary" href="/create/:{{id}}/enroll">Enroll</a>
+            <a class="btn btn-primary" href="/course/{{body._id}}/enroll">Enroll</a>
             {{/if}}
             {{/if}}
 
